change match history height to show more of the game in the background. it also fixes the probleme on smaller screen where the box would overflow

--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -20,7 +20,7 @@
     }
 }
 
-@media only screen and (max-height: 688px) {
+/* @media only screen and (max-height: 688px) {
     .lowerRow {
         max-height: 300px;
     }
@@ -36,7 +36,7 @@
     .lowerRow {
         max-height: 200px;
     }
-}
+} */
 
 .fill {
     height: 100%;
