--- a/frontend/css/matchHistory.css
+++ b/frontend/css/matchHistory.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 100%;
     flex-direction: column;
+    position: relative;
 }
 
 .upperRow {
@@ -11,9 +12,12 @@
 
 .lowerRow {
     color: white;
-    height: 50%;
-    min-height: 50%;
     padding: 1rem;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 35%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
